[package]
name = "servo-scraper"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
license = "MPL-2.0"

[lib]
name = "servo_scraper"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "servo-scraper"
path = "src/main.rs"

[dependencies]
libservo = { path = "servo/components/servo", default-features = false, features = ["js_jit"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
image = { version = "0.25", default-features = false, features = ["png"] }
bpaf = { version = "0.9", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dpi = "0.1"
euclid = "0.22"
url = "2.5"
log = "0.4"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
